# lidar_odometry

./: CMakeLists.txt  README.md  build.sh
app/: kitti_lidar_odometry.cpp  lidar_odometry.cpp
app/player/: kitti_player.cpp  kitti_player.h  ply_player.cpp  ply_player.h
config/: kitti.yaml  mid360.yaml  os128.yaml
src/database/: LidarFrame.cpp  LidarFrame.h  VoxelMap.cpp  VoxelMap.h
src/map/: FastVoxelGrid.h  VoxelMap.cpp  VoxelMap.h
src/optimization/: AdaptiveMEstimator.cpp  AdaptiveMEstimator.h  IterativeClosestPointOptimizer.cpp  IterativeClosestPointOptimizer.h  PoseGraphOptimizer.cpp  PoseGraphOptimizer.h
src/processing/: Estimator.cpp  Estimator.h  LoopClosureDetector.cpp  LoopClosureDetector.h
src/util/: Config.cpp  Config.h  ConfigUtils.cpp  ConfigUtils.h  ICPConfig.h  ICPUtils.h  LieUtils.cpp  LieUtils.h  LogUtils.h  MathUtils.cpp  MathUtils.h  PointCloudUtils.cpp  PointCloudUtils.h  TypeUtils.h  Types.h
src/viewer/: PangolinViewer.cpp  PangolinViewer.h
